fixed overflow for call-out-box

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -55,21 +55,13 @@
   @apply max-w-3xl;
 }
 
-.is-wide {
-  @apply -mx-5;
-  @apply pr-0;
-  @apply pl-5;
-  @apply w-screen;
-  max-width: 51rem;
-}
-
 /* Border image derived from an image found at
    https://jrsinclair.com/ */
 .painted-border {
   background: transparent;
   border-image-slice: 6.8965517241% 7.8636959371% 7.0993914807% 0 fill;
   @apply border-t-30;
-  @apply border-r-30;
+  @apply border-r-0;
   @apply border-b-30;
   @apply border-l-0;
   border-style: solid;
@@ -101,13 +93,13 @@ h1 a {
 }
 
 .call-out-indigo {
-  @apply is-wide;
   @apply painted-border;
+  @apply -mx-5;
   @apply pt-2;
   @apply pr-0;
   @apply pb-4;
+  @apply pl-5;
   border-image-source: url(./bg-paper-indigo.svg);
-  max-width: unset;
 }
 
 .call-out-indigo :not(pre) > code[class*="language-"],
